--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App : dessin</title>
     <link rel="stylesheet" href="./lib/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/base.css">
     <link rel="stylesheet" href="./src/css/nav.css">
+    <link rel="stylesheet" href="./src/css/component-dev.css">
+    <link rel="stylesheet" href="./src/css/component-comics.css">
+    <link rel="stylesheet" href="./src/css/component-viewer.css">
   </head>
   <body>
     <div id="app"></div>
     <!-- <script type="module" src="/main.js"></script> -->
     <script type="module" src="/src/app.js"></script>
+    
   </body>
 </html>
