--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App : dessin</title>
+    <title>TotoMaster</title>
     <link rel="stylesheet" href="./lib/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./src/css/style.css">
-    <link rel="stylesheet" href="./src/css/base.css">
-    <link rel="stylesheet" href="./src/css/nav.css">
-    <link rel="stylesheet" href="./src/css/component-dev.css">
-    <link rel="stylesheet" href="./src/css/component-comics.css">
-    <link rel="stylesheet" href="./src/css/component-viewer.css">
+    <link rel="stylesheet" href="./src/css/style_light.css">
   </head>
   <body>
     <div id="app"></div>
