--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./src/css/base.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/nav.css">
+    <link rel="stylesheet" href="./src/css/component-viewer.css">
+    <link rel="stylesheet" href="./src/css/component-comics.css">
 
     <!-- swiper -->
     <link rel="stylesheet" href="./lib/swiper/swiper.css">
